update checksum to match world template implementation